# ASCENT

./: .pre-commit-config.yaml  README.md  pyproject.toml
ascent/: eval.py  predict.py  train.py
ascent/configs/datamodule/: _dataset_v2_nnunet_2d.yaml  _dataset_v2_nnunet_wguidance_2d.yaml  _dataset_v2_nnunet_woguidance_2d.yaml  _dataset_v2_woguidance_2d.yaml  nnunet.yaml
ascent/configs/experiment/: _dataset_v2_nnunet_2d.yaml  _dataset_v2_nnunet_wguidance_2d.yaml  _dataset_v2_nnunet_woguidance_2d.yaml  _dataset_v2_swinunet_2d.yaml  _dataset_v2_transunet_2d.yaml  _dataset_v2_unetr_2d.yaml  _dataset_v2_woguidance_2d.yaml
ascent/configs/model/: _dataset_v2_swinunet_2d.yaml  _dataset_v2_transunet_2d.yaml  _dataset_v2_unetr_2d.yaml  _dataset_v2_woguidance_2d.yaml  swinunet.yaml  transunet.yaml  unetr.yaml
ascent/configs/model/net/: swinunet.yaml  transunet.yaml  unetr.yaml
ascent/configs/model/scheduler/: onecyclelr.yaml
ascent/configs/paths/: synth.yaml
ascent/datamodules/: nnunet_datamodule.py  nnunet_dealias_datamodule.py
ascent/models/: nnunet_dealias_module.py  swinunet_module.py  transunet_module.py  unetr_module.py
ascent/models/components/: mednext.py  nnFormer.py  swinUnet.py  tiny_unet.py  transunet.py  unetr_pp.py
ascent/models/components/utils/: layers.py
ascent/utils/: logging_utils.py
ascent/utils/loss_functions/: dice_loss.py
